# ChangeLog for x11-libs/qt-opengl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-opengl/ChangeLog,v 1.34 2009/06/08 22:34:12 jer Exp $

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> qt-opengl-4.5.1.ebuild:
  Stable for HPPA (bug #266201).

  06 Jun 2009; Markus Meier <maekke@gentoo.org> qt-opengl-4.5.1.ebuild:
  amd64 stable, bug #266201

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  qt-opengl-4.5.1.ebuild:
  stable x86, bug 266201

  28 May 2009; Robert Piasek <dagger@gentoo.org> qt-opengl-4.5.1.ebuild:
  stable on arm (bug #266201)

  15 May 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-opengl-4.5.1.ebuild:
  Stable on alpha, bug #266201

  14 May 2009; Ben de Groot <yngwin@gentoo.org> -qt-opengl-4.5.0.ebuild:
  Remove old

  13 May 2009; Brent Baude <ranger@gentoo.org> qt-opengl-4.5.1.ebuild:
  Marking qt-opengl-4.5.1 ppc stable for bug 266201

*qt-opengl-4.5.1 (27 Apr 2009)

  27 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-opengl-4.5.1.ebuild:
  Version bump to 4.5.1

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-opengl-4.5.0_rc1.ebuild:
  Dropping 4.5.0_rc1

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-opengl-4.5.0.ebuild:
  Add ~arm wrt #262462

*qt-opengl-4.5.0 (04 Mar 2009)

  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-opengl-4.5.0.ebuild:
  Version bump

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-opengl-4.4.2.ebuild:
  Stable for HPPA (bug #248083).

*qt-opengl-4.5.0_rc1 (11 Feb 2009)

  11 Feb 2009; Ben de Groot <yngwin@gentoo.org> +qt-opengl-4.5.0_rc1.ebuild:
  Version bump

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org> qt-opengl-4.4.2.ebuild:
  ia64/sparc stable wrt #248038

  04 Feb 2009; Brent Baude <ranger@gentoo.org> qt-opengl-4.4.2.ebuild:
  Marking qt-opengl-4.4.2 ppc64 stable for bug 248038

  04 Feb 2009; Alexey Shvetsov <alexxy@gentoo.org> qt-opengl-4.4.2.ebuild:
  Add ~mips keywords to qt-4.4.2
