@@ -1,12 +1,12 @@
 DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
-DIST qt-mac-opensource-src-4.5.0.tar.bz2 111184478 RMD160 1df7c97276d89b814b867abc3d53a9423f720181 SHA1 a9704ccc501e66360015f33d97e939d5e2ab7c81 SHA256 baccbfa5c55da9a1f97192ec643b63f7e8afc2d51eab5f954617efd321fab947
 DIST qt-mac-opensource-src-4.5.1.tar.bz2 112558395 RMD160 eaab3d822c5a752c800e4b654cf45ef0b4b18f81 SHA1 c658aa96b715b5242d415d8b05eb81968dfaea67 SHA256 5bdfe81e0955614827550a19856c5e97af7586e06474a602ae66640fad000116
+DIST qt-mac-opensource-src-4.5.2.tar.bz2 113874121 RMD160 245efc87416788f37b4b660153a53848308d822f SHA1 da62223757a8c61c8f0e895631bb6ff06beae229 SHA256 ca990057b54f43abe0647bbd1cc7f25945e97c86caee46310d2c3be95aa7dd53
 DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
-DIST qt-x11-opensource-src-4.5.0.tar.bz2 113335010 RMD160 5714f2772ce358e6528ec13121aebc8e63e848cf SHA1 db136bbed1715c155ceb610309d33f943c1df8fd SHA256 e1b356a54e65781ed94f19d785356a88daa8d38b9dbbca35439b80ca8c4a5be9
 DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
+DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
 EBUILD qt-opengl-4.4.2.ebuild 1079 RMD160 742b05feb271fee2ef7d23a234353f79a40f4125 SHA1 e4577f2bc498b2723de89da707be25e94005c7cd SHA256 9e6570a8a5b847270d2692f6252338cd8e85ab0411a3e61bcad61e95fe40f312
-EBUILD qt-opengl-4.5.0.ebuild 969 RMD160 7dfaddd43db746796435d43799b57ce02c50fba4 SHA1 05b66a554f7b7f1cbe48dd02ea9609500ba06be4 SHA256 280dfaed154228c6400a2f677a8e46d2ab54871c5778bf23725dc4e10ce51246
 EBUILD qt-opengl-4.5.1.ebuild 991 RMD160 8b2236454c94c5256fe9bc59c8a3e72b9877e2b5 SHA1 ccde06514b87ecbda6c89e273d7b726597fe4b13 SHA256 30966d3ae55d32f21f0f0af768d15476a8b55d1d1bd599f2724b0a6f4458152b
-MISC ChangeLog 4291 RMD160 c403b41b7a3fbf14da0f0dedbb4463a34338bfaa SHA1 40d7343ed630980af0497cb9bf0d5dec3d284c76 SHA256 6803b682ff9514f8c8d878b1b9c8fd8646c016c095ffbd9b97eec68beaa0f503
+EBUILD qt-opengl-4.5.2.ebuild 993 RMD160 e9de0ae348d184810927e4e3e03380e65fcdbfbe SHA1 461a37543feb931ef6f5befd714c81f69d9eb71c SHA256 eb428ac374f9746eeaddd5a0152ffcc1df56586d460ce0453611b540d5cfac45
+MISC ChangeLog 4415 RMD160 f2c8780c09c8fce6135cf05fe389724e4a8da82f SHA1 d5a75c3a291d6f862705fb28eb03b4c1a5ddd270 SHA256 f11ad5a54fac83200b34cb0e66d8cfc227be5903ee8f9fb3ba95f7b2c93252ee
 MISC metadata.xml 241 RMD160 a4b01c7b25f020916e4b7ec0b1d494f8e2f54078 SHA1 05d7b5faaf60edc3149fd71ba64cbc577e7692a4 SHA256 e6d7a58349ce295f0397169bd553c878472d313e2b69c6a08e72f54b4a4333b0
