@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/qt-opengl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-opengl/ChangeLog,v 1.34 2009/06/08 22:34:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-opengl/ChangeLog,v 1.35 2009/06/27 19:19:21 yngwin Exp $
+
+*qt-opengl-4.5.2 (27 Jun 2009)
+
+  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> +qt-opengl-4.5.2.ebuild:
+  Version bump
 
   08 Jun 2009; Jeroen Roovers <jer@gentoo.org> qt-opengl-4.5.1.ebuild:
   Stable for HPPA (bug #266201).
